--- a/src/main/resources/templates/ownerviews/ownerdash.html
+++ b/src/main/resources/templates/ownerviews/ownerdash.html
@@ -65,7 +65,9 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="btn btn-block btn-success mt-4">Add PG</button>
+                        <!-- <a class="btn btn-block btn-success mt-4" th:href="@{/owner/add/pg}">Add PG</a> -->
+                        <button class="btn btn-info btn-block" data-target="#addpg-modal"
+                                data-toggle="modal">Add PG</button>
                     </div>
 
                     <!-- Recent guests details -->
@@ -75,7 +77,7 @@
                             <!-- <div th:if="${rguest.size == 0 || rguest == null}">
                                 <h2 class="text-danger">No guests are avialiable</h2>
                             </div> -->
-                            <table class="table">
+                            <table class="table" th:if="${rguest.size != 0}">
                                 <thead>
                                     <tr>
                                         <th>Dp</th>
@@ -252,6 +254,42 @@
                     </div>
                 </div>
             </div>
+
+         <!-- add new pg modal  -->
+        <div class="modal fade" id="addpg-modal" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <div class="container-fluid text-center">
+                            <h2>Add PG details</h2>
+                        </div>
+
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+
+                    <!-- add new pg modal body -->
+                    <div class="modal-body">
+                        <div class="container-fluid">
+
+                            <form method="POST" th:action="@{/owner/add/new/pg}" id="pgdetails">
+                                <div class="input-group form-group">
+                                    <input type="text" name="name" class="form-control" id="pg_name" required>
+                                </div>
+
+                                <input type="text" name="ownerId" th:value="${owner.id}" hidden>
+
+                                <div>
+                                    <button type="submit" id="submt-btn" class="btn btn-block btn-success">Save</button>
+                                </div>
+                            </form>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         </div>
         <input type="number" id="per-data" th:value="${percentage}" hidden/>
